This is myself blog.

--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,22 @@
-markdown: kramdown
+﻿markdown: kramdown
 highlighter: pygments
 permalink: /posts/:title.html
 excerpt_separator: "<!-- more -->"
 
-github: panxw
-author: "潘学文"
-email: winfirm#163.com
-name: "潘学文个人博客"
-url: http://www.panxw.com
+github: TeslaHua
+author: "王中华"
+email: wangzhonghua_cnu@163.com
+name: "王中华个人博客"
 domain: www.panxw.com
 all_categories: [
-["android", "Android开发","/posts/android.html"], 
-["program", "软件编程","/posts/program.html"],
-["web", "Web建站","/posts/web.html"], 
-["linux", "Linux相关","/posts/linux.html"],
-["read", "读书笔记","/posts/read.html"], 
-["other", "杂记","/posts/other.html"],
-["about", "关于","/about.html"]
+["java", "Java后台相关","/posts/java.html"],
+["web", "Web前端相关","/posts/web.html"],
+["database", "数据库相关","/posts/database.html"],
+["embedded", "嵌入式设计相关","/posts/embedded.html"],
+["Linux", "Linux相关","/posts/Linux.html"],
+["hardware", "硬件设计相关","/posts/hardware.html"],
+["about", "关于","/posts/about.html"],
+["read", "读书笔记","/posts/read.html"]
 ]
 
 paginate: 8
@@ -27,5 +27,5 @@ collections:
   docs:
     output: true
 
-gems:
+plugins:
  - jekyll-paginate
