--- a/_config.yml
+++ b/_config.yml
@@ -30,11 +30,11 @@ collections:
 plugins:
  - jekyll-paginate
 
-# Gitment
+#Gitment
 gitment:
 enable: true
 githubID: TeslaHUa
-repo: https://github.com/TeslaHua/TeslaHua.github.io.git
+repo: TeslaHua.github.io.git
 ClientID: 0f1b792c389050e22d2e
 ClientSecret: a85a92835f8831731511a47e40dcc3855574d176
 lazy: false
