--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ plugins:
 #Gitment
 gitment:
 enable: true
-githubID: TeslaHUa
+githubID: TeslaHua
 repo: TeslaHua.github.io.git
 ClientID: 0f1b792c389050e22d2e
 ClientSecret: a85a92835f8831731511a47e40dcc3855574d176
