--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,14 @@ collections:
 plugins:
  - jekyll-paginate
 
-gitment: true
+# Gitment
+# Introduction: https://imsun.net/posts/gitment-introduction/
+gitment:
+  enable: true
+  githubID: TeslaHua
+  repo: TeslaHua.github.io
+  ClientID: ------
+  ClientSecret: ------
+  lazy: false
 
 
